--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>MPCR Lab @ FAU</title>
+    <title>Visual Mind Lab @ FAU</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -85,14 +85,14 @@ h1 em {
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Machine Perception &<br>Cognitive Robotics Laboratory</h1>
-      <h2 class="project-tagline">Center for Complex Systems and Brain Sciences  -  Florida Atlantic University, FL, USA</h2>
+      <h1 class="project-name">Visual Mind Lab</h1>
+      <h2 class="project-tagline">Department of Psychology  -  Florida Atlantic University, FL, USA</h2>
       <h4><a href="https://mpcrlab.github.io/"><font color="FFFFFF">Home</font></a>  -   <a href="https://mpcrlab.github.io/teaching"><font color="FFFFFF">Courses</font></a>  -   <a href="https://mpcrlab.github.io/media"><font color="FFFFFF">Media</font></a>  -  <a href="https://mpcrlab.github.io/currentResearch"><font color="FFFFFF">Research</font></a>  -  <a href="https://mpcrlab.github.io/publications"><font color="FFFFFF">Publications</font></a>  -  <a href="https://github.com/mpcrlab"><font color="FFFFFF">GitHub</font></a> - <a href="https://mpcrlab.github.io/members"><font color="FFFFFF">Members</font></a>  -  <a href="https://mpcrlab.github.io/contactUs"><font color="FFFFFF">Contact</font></a></h4>
     </section>
 
     <section class="main-content">
     
-    <h2>MPCR: Machine Perception & Cognitive Robotics Laboratory</h2>
+    <h2>Visual Mind Laboratory</h2>
     <p>We are a multidisciplinary research group at Florida Atlantic University, focusing on deep learning and its applications to cognitive robotics. Through these two endeavors we hope to investigate the workings of biological nervous systems, and relate it to research in neuroscience and evolutionary biology.</p>
 	
 	<p><center><img src="Pictures/rovers.jpg" alt="Test Photo" style="width:600px;height:338px"></center></p>
