--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ h1 em {
 
     <section class="main-content">
     
-    <h2>Visual Mind Laboratory</h2>
+    <h2>Visual Mind Lab</h2>
     <p>We are a multidisciplinary research group at Florida Atlantic University, focusing on deep learning and its applications to cognitive robotics. Through these two endeavors we hope to investigate the workings of biological nervous systems, and relate it to research in neuroscience and evolutionary biology.</p>
 	
 	<p><center><img src="Pictures/rovers.jpg" alt="Test Photo" style="width:600px;height:338px"></center></p>
