--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ h1 em {
     <section class="page-header">
       <h1 class="project-name">Visual Mind Lab</h1>
       <h2 class="project-tagline">Department of Psychology  -  Florida Atlantic University, FL, USA</h2>
-      <h4><a href="https://mpcrlab.github.io/"><font color="FFFFFF">Home</font></a>  -  <a href="https://mpcrlab.github.io/media"><font color="FFFFFF">Media</font></a>  -  <a href="https://mpcrlab.github.io/currentResearch"><font color="FFFFFF">Research</font></a>  -  <a href="https://mpcrlab.github.io/publications"><font color="FFFFFF">Publications</font></a>  - <a href="https://mpcrlab.github.io/members"><font color="FFFFFF">Members</font></a>  -  <a href="https://mpcrlab.github.io/contactUs"><font color="FFFFFF">Contact</font></a></h4>
+      <h4><a href="https://mpcrlab.github.io/"><font color="FFFFFF">Home</font></a>  -  <a href="https://mpcrlab.github.io/currentResearch"><font color="FFFFFF">Research</font></a>  -  <a href="https://mpcrlab.github.io/publications"><font color="FFFFFF">Publications</font></a>  - <a href="https://mpcrlab.github.io/members"><font color="FFFFFF">Members</font></a>  -  <a href="https://mpcrlab.github.io/contactUs"><font color="FFFFFF">Contact</font></a></h4>
     </section>
 
     <section class="main-content">
