--- a/currentResearch.html
+++ b/currentResearch.html
@@ -88,8 +88,7 @@ h1 em {
     <section class="page-header">
       <h1 class="project-name">Machine Perception &<br>Cognitive Robotics Laboratory</h1>
       <h2 class="project-tagline">Center for Complex Systems and Brain Sciences  -  Florida Atlantic University, FL, USA</h2>
-      <h4><a href="https://mpcrlab.github.io/"><font color="FFFFFF">Home</font></a>  -   <a href="https://mpcrlab.github.io/teaching"><font color="FFFFFF">Courses</font></a>  -   <a href="https://mpcrlab.github.io/media"><font color="FFFFFF">Media</font></a>  -  <a href="https://mpcrlab.github.io/currentResearch"><font color="FFFFFF">Research</font></a>  -  <a href="https://mpcrlab.github.io/publications"><font color="FFFFFF">Publications</font></a>  -  <a href="https://github.com/mpcrlab"><font color="FFFFFF">GitHub</font></a> - <a href="https://mpcrlab.github.io/members"><font color="FFFFFF">Members</font></a>  -  <a href="https://mpcrlab.github.io/contactUs"><font color="FFFFFF">Contact</font></a></h4>
-    </section>
+      <h4><a href="https://visualmind.github.io/"><font color="FFFFFF">Home</font></a>  -  <a href="https://visualmind.github.io/currentResearch"><font color="FFFFFF">Research</font></a>  -  <a href="https://visualmind.github.io/publications"><font color="FFFFFF">Publications</font></a>  - <a href="https://visualmind.github.io/members"><font color="FFFFFF">Members</font></a>  -  <a href="https://visualmind.github.io/contactUs"><font color="FFFFFF">Contact</font></a></h4>    </section>
 
     <section class="main-content">
     
