--- a/publications.html
+++ b/publications.html
@@ -88,6 +88,7 @@ h1 em {
       <h1 class="project-name">Machine Perception &<br>Cognitive Robotics Laboratory</h1>
       <h2 class="project-tagline">Center for Complex Systems and Brain Sciences  -  Florida Atlantic University, FL, USA</h2>
       <h4><a href="https://visualmind.github.io/"><font color="FFFFFF">Home</font></a>  -  <a href="https://visualmind.github.io/currentResearch"><font color="FFFFFF">Research</font></a>  -  <a href="https://visualmind.github.io/publications"><font color="FFFFFF">Publications</font></a>  - <a href="https://visualmind.github.io/members"><font color="FFFFFF">Members</font></a>  -  <a href="https://visualmind.github.io/contactUs"><font color="FFFFFF">Contact</font></a></h4>
+    </section>
     <section class="main-content">
     
     <h2>Publications</h2>
