--- a/members.html
+++ b/members.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>MPCR Lab @ FAU</title>
+    <title>Visual Mind Lab @ FAU</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -65,7 +65,7 @@
 }
 .module {
   padding: 20px;
-  background: #FFFFFF;
+  background: #eee;
 }
 /* Opt-in outside padding */
 .grid-pad {
@@ -85,10 +85,10 @@ h1 em {
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Machine Perception &<br>Cognitive Robotics Laboratory</h1>
-      <h2 class="project-tagline">Center for Complex Systems and Brain Sciences  -  Florida Atlantic University, FL, USA</h2>
-      <h4><a href="https://visualmind.github.io/"><font color="FFFFFF">Home</font></a>  -  <a href="https://visualmind.github.io/currentResearch"><font color="FFFFFF">Research</font></a>  -  <a href="https://visualmind.github.io/publications"><font color="FFFFFF">Publications</font></a>  - <a href="https://visualmind.github.io/members"><font color="FFFFFF">Members</font></a>  -  <a href="https://visualmind.github.io/contactUs"><font color="FFFFFF">Contact</font></a></h4>    </section>
-
+      <h1 class="project-name">Visual Mind Lab</h1>
+      <h2 class="project-tagline">Department of Psychology  -  Florida Atlantic University, FL, USA</h2>
+      <h4><a href="https://visualmind.github.io/"><font color="FFFFFF">Home</font></a>  -  <a href="https://visualmind.github.io/currentResearch"><font color="FFFFFF">Research</font></a>  -  <a href="https://visualmind.github.io/publications"><font color="FFFFFF">Publications</font></a>  - <a href="https://visualmind.github.io/members"><font color="FFFFFF">Members</font></a>  -  <a href="https://visualmind.github.io/contactUs"><font color="FFFFFF">Contact</font></a></h4>
+    </section>
     <section class = "main-content">
     	<h2>Members</h2>
     	<h3>Principal Investigator</h3>
