--- a/members.html
+++ b/members.html
@@ -113,6 +113,40 @@ h1 em {
 		<div class="grid">
 		   <div class="col-1-3">
 		     <div class="module">
+		       <img src="Pictures/tempFace.png" alt="Test Photo" style="width:225px;height:225px">	
+		       		       <center><a href="https://mpcrlab.github.io/">Web</a>  -  <a href="https://mpcrlab.github.io/">GitHub</a> -  <a href="https://mpcrlab.github.io/">Email</a></center>
+
+		     </div>
+		   </div>
+		   <div class="col-2-3">
+		     <div class="module">
+		     		<h3>Lauren Mavica, M.S., B.S.</h3>
+					<p>Exerci interpretaris in mea. Quodsi feugait honestatis ea ius, vix ludus repudiare et, no vel copiosae corrumpit. Etiam summo delicatissimi te quo. Ut instructior complectitur sea, vim ne magna nostrum interesset. Ludus vocent appellantur has ne. Qui decore ponderum expetendis te, legimus probatus pro ad. In pro utamur regione. Mollis nonumes apeirian qui cu, vide sententiae te eos, ne eam suas eligendi perpetua. Vim putent insolens salutandi ea, qui alii altera quaeque eu.</p>	
+		     </div>
+		   </div>
+		</div>
+		
+		<div class="grid">
+		   <div class="col-1-3">
+		     <div class="module">
+		       <img src="Pictures/tempFace.png" alt="Test Photo" style="width:225px;height:225px">	
+		       		       <center><a href="https://mpcrlab.github.io/">Web</a>  -  <a href="https://mpcrlab.github.io/">GitHub</a> -  <a href="https://mpcrlab.github.io/">Email</a></center>
+
+		     </div>
+		   </div>
+		   <div class="col-2-3">
+		     <div class="module">
+		     		<h3>Derrick Schlangen, M.S., B.S.</h3>
+					<p>Exerci interpretaris in mea. Quodsi feugait honestatis ea ius, vix ludus repudiare et, no vel copiosae corrumpit. Etiam summo delicatissimi te quo. Ut instructior complectitur sea, vim ne magna nostrum interesset. Ludus vocent appellantur has ne. Qui decore ponderum expetendis te, legimus probatus pro ad. In pro utamur regione. Mollis nonumes apeirian qui cu, vide sententiae te eos, ne eam suas eligendi perpetua. Vim putent insolens salutandi ea, qui alii altera quaeque eu.</p>	
+		     </div>
+		   </div>
+		</div>
+		
+		
+		
+		<div class="grid">
+		   <div class="col-1-3">
+		     <div class="module">
 		       <img src="Pictures/hahn.png" alt="Test Photo" style="width:225px;height:225px">	
 		       		       <center><a href="https://mpcrlab.github.io/">Web</a>  -  <a href="https://mpcrlab.github.io/">GitHub</a> -  <a href="https://mpcrlab.github.io/">Email</a></center>
 
@@ -145,36 +179,19 @@ h1 em {
 		<div class="grid">
 		   <div class="col-1-3">
 		     <div class="module">
-		       <img src="Pictures/lewkowitz.png" alt="Test Photo" style="width:225px;height:225px">
+		       <img src="Pictures/tempFace.png" alt="Test Photo" style="width:225px;height:225px">	
 		       		       <center><a href="https://mpcrlab.github.io/">Web</a>  -  <a href="https://mpcrlab.github.io/">GitHub</a> -  <a href="https://mpcrlab.github.io/">Email</a></center>
 
 		     </div>
 		   </div>
 		   <div class="col-2-3">
 		     <div class="module">
-		     		<h3>Stephanie Lewkowitz, M.S., B.S.</h3>
+		     		<h3>Mohammed Islam, B.S.</h3>
 					<p>Exerci interpretaris in mea. Quodsi feugait honestatis ea ius, vix ludus repudiare et, no vel copiosae corrumpit. Etiam summo delicatissimi te quo. Ut instructior complectitur sea, vim ne magna nostrum interesset. Ludus vocent appellantur has ne. Qui decore ponderum expetendis te, legimus probatus pro ad. In pro utamur regione. Mollis nonumes apeirian qui cu, vide sententiae te eos, ne eam suas eligendi perpetua. Vim putent insolens salutandi ea, qui alii altera quaeque eu.</p>	
 		     </div>
 		   </div>
 		</div>
 		
-		<div class="grid">
-		   <div class="col-1-3">
-		     <div class="module">
-		       <img src="Pictures/chad.jpg" alt="Test Photo" style="width:225px;height:225px">	
-		       		       <center><a href="https://mpcrlab.github.io/">Web</a>  -  <a href="https://mpcrlab.github.io/">GitHub</a> -  <a href="https://mpcrlab.github.io/">Email</a></center>
-
-		     </div>
-		   </div>
-		   <div class="col-2-3">
-		     <div class="module">
-		     		<h3>Chad Carlson, B.S.</h3>
-					<p>Exerci interpretaris in mea. Quodsi feugait honestatis ea ius, vix ludus repudiare et, no vel copiosae corrumpit. Etiam summo delicatissimi te quo. Ut instructior complectitur sea, vim ne magna nostrum interesset. Ludus vocent appellantur has ne. Qui decore ponderum expetendis te, legimus probatus pro ad. In pro utamur regione. Mollis nonumes apeirian qui cu, vide sententiae te eos, ne eam suas eligendi perpetua. Vim putent insolens salutandi ea, qui alii altera quaeque eu.</p>	
-		     </div>
-		   </div>
-		</div>
-		
-		<h3>Undergraduate Members</h3>
 	
 	
 		
