--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ h1 em {
     <h2>Visual Mind Lab</h2>
     <p>We are a multidisciplinary research group at Florida Atlantic University, focusing on deep learning and its applications to cognitive robotics. Through these two endeavors we hope to investigate the workings of biological nervous systems, and relate it to research in neuroscience and evolutionary biology.</p>
 	
-	<p><center><img src="Pictures/rovers.jpg" alt="Test Photo" style="width:600px;height:338px"></center></p>
+	<p><center><img src="Pictures/VML%20Photo%202014.jpg" alt="Test Photo" style="width:600px;height:338px"></center></p>
 	
 	<h3>Machine Perception</h3>
 	<p>Lorem ipsum dolor sit amet, id est quot dissentias, facer utroque inciderint no mel. Qui phaedrum senserit at. Et lucilius efficiendi vis, te ridens labore cum. Ei pri populo consetetur, odio graeci pericula vim cu. Ut quaeque deseruisse adipiscing his, ea causae perfecto dissentiunt est. Soluta omittantur pro ea, omnium euripidis moderatius pri id, id euismod pertinacia nam.</p>
