--- a/members.html
+++ b/members.html
@@ -192,8 +192,8 @@ h1 em {
 		   </div>
 		</div>
 		
-	
-	
+	<h3>Undergraduate Members</h3>
+	<h3>Past Members</h3>
 		
       <footer class="site-footer">
 
