--- a/currentResearch.html
+++ b/currentResearch.html
@@ -93,13 +93,11 @@ h1 em {
     
     <h2>Current Research</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vulputate cursus justo auctor pulvinar. Sed et lacus sodales, accumsan diam id, congue nulla.</p>
-    <h3>Machine Perception</h3>
+    <h3>Context-Based Recognition</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vulputate cursus justo auctor pulvinar. Sed et lacus sodales, accumsan diam id, congue nulla.</p>
-    <h3>Cognitive Robotics</h3>
+    <h3>Shape and Motion</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vulputate cursus justo auctor pulvinar. Sed et lacus sodales, accumsan diam id, congue nulla.</p>
-    <h3>Vision Science</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vulputate cursus justo auctor pulvinar. Sed et lacus sodales, accumsan diam id, congue nulla.</p>
-    <h3>Virtual Reality</h3>
+    <h3>Visual Statistics</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vulputate cursus justo auctor pulvinar. Sed et lacus sodales, accumsan diam id, congue nulla.</p>
     
       <footer class="site-footer">
