--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@ h1 em {
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">VML: Visual Mind Lab</h1>
+      <h1 class="project-name">Visual Mind Lab</h1>
       <h2 class="project-tagline">Department of Psychology  -  Florida Atlantic University, FL, USA</h2>
       <h4><a href="https://visualmind.github.io/"><font color="FFFFFF">Home</font></a>  -  <a href="https://visualmind.github.io/currentResearch"><font color="FFFFFF">Research</font></a>  -  <a href="https://visualmind.github.io/publications"><font color="FFFFFF">Publications</font></a>  - <a href="https://visualmind.github.io/members"><font color="FFFFFF">Members</font></a>  -  <a href="https://visualmind.github.io/contactUs"><font color="FFFFFF">Contact</font></a></h4>
     </section>
 
     <section class="main-content">
     
-    <h2>Visual Mind Lab</h2>
+    <h2>VML: Visual Mind Lab</h2>
 	<p>How does our brain combine knowledge about the world with the sensory input in order to understand the world? How do we combine information from other modalities into a unified representation?</p>
 	<p>In the VML, we are using behavioral, computational and neurophysiological methods in order to investigate these and other related topics in perception science. </p>
 
